--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );}
     </header>
     <div class="nav-bg"></div>
     
-    <h1 class="animated-heading">Banana Quilty Prediction</h1>
+    <h1 class="animated-heading">Banana Quality Prediction</h1>
     
     <form id="bananaForm">
         <div class="form__group field">
